tests/pos/byname-purefuns-adapt/A_1.scala
object A:
  def f(x: => Int) = ()

